--- a/app/src/main/res/drawable/pause_icon.xml
+++ b/app/src/main/res/drawable/pause_icon.xml
@@ -1,5 +1,4 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z"/>
+<vector android:height="24dp" android:viewportHeight="357"
+    android:viewportWidth="357" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M25.5,357h102V0h-102V357zM229.5,0v357h102V0H229.5z"/>
 </vector>
