--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -70,6 +70,7 @@
             android:textStyle="bold" />
 
         <SeekBar
+            android:id="@+id/seekbar_controller"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
