PlayPause controls added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,20 +53,23 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/songs_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/ll_tab_layout"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <android.support.design.widget.FloatingActionButton
+            app:layout_anchor="@id/songs_viewpager"
             android:id="@+id/btn_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:clickable="true"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/refresh_icon"
-            app:backgroundTint="@color/colorPrimary" />
+            app:backgroundTint="@color/colorPrimary"
+            android:focusable="true" />
 
     </RelativeLayout>
 
