--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -62,9 +62,10 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_current_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0.00"
+            android:text="@string/start_time"
             android:textColor="@color/text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -74,16 +75,16 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
             android:backgroundTint="@color/text_color"
             android:fitsSystemWindows="true"
             android:progressTint="@color/text_color"
             android:thumbTint="@color/text_color" />
 
         <TextView
+            android:id="@+id/tv_total_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0.00"
+            android:text="@string/final_time"
             android:textColor="@color/text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
