--- a/app/src/main/res/layout/playlist_items.xml
+++ b/app/src/main/res/layout/playlist_items.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@id/iv_music_list"
+        android:singleLine="true"
         android:text="Title"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
@@ -30,6 +31,7 @@
         android:layout_below="@id/tv_music_name"
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@id/iv_music_list"
+        android:singleLine="true"
         android:text="SubTitle"
         android:textColor="@color/gray_color"
         android:textSize="12sp"
