--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/gray_color"
-        android:dividerHeight="1dp" />
+        android:dividerHeight="1dp"
+        android:longClickable="true" />
 
 
 </LinearLayout>
