--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="colorPrimary">#45b5ec</color>
     <color name="colorPrimaryDark">#1c8fc7</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorAccent">#ffffff</color>
 
     <color name="text_color">#ffffff</color>
+    <color name="color_black">#000000</color>
     <color name="drawer_color">#335763</color>
     <color name="light_color">#fafafa</color>
     <color name="off_color">#dfdada</color>
