--- a/app/src/main/res/menu/action_bar_menu.xml
+++ b/app/src/main/res/menu/action_bar_menu.xml
@@ -4,13 +4,14 @@
 
     <item
         android:id="@+id/menu_search"
-        app:showAsAction="always"
+        android:icon="@drawable/search_icon"
         android:title="@string/search"
-        android:icon="@drawable/search_icon"/>
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_favorites"
-        app:showAsAction="always"
+        android:icon="@drawable/favorite_icon"
         android:title="@string/favorites"
-        android:icon="@drawable/favorite_icon"/>
+        app:showAsAction="always" />
 
 </menu>
