--- a/app/src/main/res/menu/action_bar_menu.xml
+++ b/app/src/main/res/menu/action_bar_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/menu_search"
         android:icon="@drawable/search_icon"
         android:title="@string/search"
-        app:actionViewClass="android.widget.SearchView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
     <item
         android:id="@+id/menu_favorites"
